# lift-calc

./: README.md  pyproject.toml  run.sh  test-cli.sh
src/lift_calc/: cli.py  novice.py
src/tests/: test_lift_calc.py  test_novice.py
