[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lift-calc"
version = "0.1.0"
description = "Calculate weightlifting workouts"
readme = "README.md"
authors = [{name = "Dan Davis", email = "dan@dandavis.dev"}]
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
keywords = ["strength", "weightlifting", "lifting", "calculator"]
dependencies = [
    "click"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "flake8", "flake8-isort", "mypy", "pytest"]

[project.urls]
Homepage = "https://github.com/danofsteel32/lift-calc"

[project.scripts]
lift-calc = "lift_calc.cli:run"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
